# kyoku

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  docker-compose.yaml  readme.md  sqlx-data.json
migrations/: 20201116031038_new.sql
src/: db.rs  main.rs
src/api/: album.rs  index.rs  mod.rs  search.rs  serve.rs  song.rs  system.rs
src/index/: db.rs  fm.rs  metadata.rs  mod.rs  spotify.rs
